--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <wrapper class="content">
 
         <!-- Article 1 -->
-        <article class="search-engine-optimization">
+        <article id="search-engine-optimization" class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" alt="Notepad showcasing mind bubble saying SEO surrounded by the words from top going clockwise Content, Headings, Mobile Compatibilty, Social Media, Link Building, and Backlink."class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
